--- a/DBProject/HTML/App.html
+++ b/DBProject/HTML/App.html
@@ -13,13 +13,13 @@
 <body>
     
     <div class="container blockapp my-3">
-        <div class="container mt-3">
+        <div class="container my-5">
             <div class="row">
-                <div class="col col-lg-4">
+                <div class="col col-lg-4 mt-3">
                     <img class="img-fluid" src="../IMAGES/call.jpg" alt="">
 
                 </div>
-                <div class="col col-lg-8">
+                <div class="col col-lg-8 mt-3">
                     <h1>
                         Call of Duty®: Mobile</h1>
                     <h6>Activision Publishing, Inc. Action</h6>
