--- a/DBProject/HTML/App.html
+++ b/DBProject/HTML/App.html
@@ -9,6 +9,37 @@
     <link rel="stylesheet" href="../CSS/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
+<header>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+        <a class="navbar-brand">Brand</a>
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">devices</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">SoftWare</a>
+                </li>
+                <li class="nav-item">
+                   <a class="nav-link">Item 2</a>
+                </li>
+                <li class="nav-item">
+                 <a class="nav-link">Item 2</a>
+              </li> 
+              <li class="nav-item">
+                 <a class="nav-link">Item 2</a>
+              </li>
+ 
+            </ul>
+        </div>
+    </nav>
+   
+ </nav>
+ </header>
 
 <body>
     
