--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -381,4 +381,7 @@
 
 
 </body>
+<script src="../bootstrap/jquery.js"></script>
+<script src="../bootstrap/popper.main.js"></script>
+<script src="../bootstrap/bootstrap.js"></script>
 </html>
