--- a/DBProject/HTML/Group.html
+++ b/DBProject/HTML/Group.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../bootstrap/bootstrap.css">
-   
+    <link rel="stylesheet" href="../CSS/Group.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
@@ -40,6 +40,16 @@
  </nav>
  </header>
 <body>
+    <div class="group-title">
+        <div class="grouppic">
+            <img height="360" src="../IMAGES/PUBG.jpg" alt="">
+            <div class="grouptitleborder">
+                <H1>PUPG Campers</H1>
+            <H6>1 member</H6>
+        </div>
+            <!--<div class="line"> </div>-->
+        </div>
+    </div>
     <div class="container my-2">
         <div class="row ">
             <div class="col-lg-1">
@@ -72,7 +82,7 @@
             <div class="col-lg-11">
                 <h6>Radwa Ahmed</h6>
               
-                <p>I love the game, I hsvd been playing for months now. But the direction it is taking could make me to stop playing. Since the start of season 12, performance has been disregarded and it has become more about features and looks. I cannot enjoy the beauty of the game if it cannot perform what it intend...</p>
+                <p>I love the game, I have been playing for months now. But the direction it is taking could make me to stop playing. Since the start of season 12, performance has been disregarded and it has become more about features and looks. I cannot enjoy the beauty of the game if it cannot perform what it intend...</p>
 
             </div>
             <div class="col-lg-1">
@@ -82,7 +92,7 @@
             </div>
             <div class="col-lg-11">
                 <h6>Radwa Ahmed</h6>
-                <p>I love the game, I hsvd been playing for months now. But the direction </p>
+                <p>I love the game, I hav been playing for months now. But the direction </p>
                 <img class="img-fluid" src="../IMAGES/pp.webp" alt="">
 
             </div>
