--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -6,6 +6,23 @@
      <link rel="stylesheet" href="../bootstrap/bootstrap.css">
      <link rel="stylesheet" href="../CSS/Home.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" type="text/css" href="css/demo.css"> 
+     <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+    <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+     <link rel="stylesheet" type="text/css" href="css/demo.css"> 
+     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Document</title>
 </head>
 <header>
@@ -374,8 +391,29 @@
         </div>
 
     </div>
+       
 
  </div>
+  <div class="container mt-5 mb-3">
+        <footer id="footer"  >
+    
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-google"></a>
+
+
+
+
+
+    </footer>
+    <div class="copy">
+    <small><p class="ourcopy">&copy;Copyright Clock Works. All Rights Reserved</p></small> 
+    <small><p class="ourcopy"> Developed with   <i class="fas fa-heart" style="color:red;"></i> by DBMS Team
+    </p></small> 
+
+</div>
+   
+  </div>
 
 
 
