--- a/DBProject/HTML/App.html
+++ b/DBProject/HTML/App.html
@@ -77,7 +77,7 @@
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
-                    <br>
+                    <br><br>
                     <button class="btn btn-primary" type="button">install</button>
 
                 </div>
@@ -203,7 +203,7 @@
     </footer>
     <div class="copy">
     <small><p class="ourcopy">&copy;Copyright Clock Works. All Rights Reserved</p></small> 
-    <small><p class="ourcopy"> Developed with   <i class="fas fa-heart" style="color:red;"></i> by DBMS Team
+    <small><p class="ourcopy"> Developed with   <i class="fas fa-heart" style="color:red;"></i> by Clocksmiths  Team
     </p></small> 
 
 </div>
