--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -408,10 +408,10 @@
     </footer>
     <div class="copy">
     <small><p class="ourcopy">&copy;Copyright Clock Works. All Rights Reserved</p></small> 
-    <small><p class="ourcopy"> Developed with   <i class="fas fa-heart" style="color:red;"></i> by DBMS Team
+    <small><p class="ourcopy"> Developed with   <i class="fas fa-heart" style="color:red;"></i> by Clocksmiths Team
     </p></small> 
 
-</div>
+
    
   </div>
 
