--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -26,35 +26,36 @@
     <title>Document</title>
 </head>
 <header>
-    
-   <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-       <a class="navbar-brand">Brand</a>
-       <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div id="my-nav" class="collapse navbar-collapse">
-           <ul class="navbar-nav mr-auto">
-               <li class="nav-item active">
-                   <a class="nav-link" href="#">devices</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link">SoftWare</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link">Item 2</a>
-               </li>
-               <li class="nav-item">
-                <a class="nav-link">Item 2</a>
-             </li> 
-             <li class="nav-item">
-                <a class="nav-link">Item 2</a>
-             </li>
 
-           </ul>
-       </div>
-   </nav>
-  
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+        <a class="navbar-brand" href="../HTML/Home.html">Clockwork</a>
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Browse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Groups</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../HTML/supportticket.html">Support</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Extra </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../HTML/About.html">About</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    </nav>
 </header>
 <body>
         
