--- a/DBProject/HTML/supportticket.html
+++ b/DBProject/HTML/supportticket.html
@@ -1,11 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="../CSS/Footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
 </head>
+
+<header>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+        <a class="navbar-brand" href="../HTML/Home.html">Clockwork</a>
+        <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="my-nav" class="collapse navbar-collapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Browse</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Groups</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../HTML/supportticket.html">Support</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link">Extra </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../HTML/About.html">About</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+    </nav>
+</header>
+
 <body>
-    
+
+<div style="text-align: center; ">
+    <div class="col-lg-11">
+        <textarea name="" id="" cols="80" rows="5"></textarea>
+        <br>
+        <div style="display: flex;">
+             <button class="btn btn-primary" type="button">Submit Ticket</button>
+             <input id="my-input" class="form-control-file" type="file" name="">
+         
+        </div>
+    </div>
+</div>
+
+    <div class="container mt-5 mb-3">
+        <footer id="footer">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-google"></a>
+        </footer>
+        <div class="copy">
+            <small>
+                <p class="ourcopy">&copy;Copyright Clock Works. All Rights Reserved</p>
+            </small>
+            <small>
+                <p class="ourcopy"> Developed with <i class="fas fa-heart" style="color:red;"></i> by Clocksmiths Team
+                </p>
+            </small>
+        </div>
 </body>
+
 </html>
