Front-end Base Almost Finished
Created the browse, Group_List and Category pages and formated them a little. Also, linked all the pages together except the Employee, login and sign up pages. Fixed the nav bar alignment.

--- a/DBProject/HTML/About.html
+++ b/DBProject/HTML/About.html
@@ -8,24 +8,21 @@
     <link rel="stylesheet" href="../CSS/About.css">
     <link rel="stylesheet" href="../CSS/Footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-   
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
-     <link rel="stylesheet" type="text/css" href="css/demo.css"> 
-     <link rel="stylesheet" type="text/css" href="css/demo.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> 
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link href="http://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
         integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
-     <link rel="stylesheet" type="text/css" href="css/demo.css"> 
-     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" type="text/css" href="css/demo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Document</title>
 </head>
 <header>
@@ -39,10 +36,10 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Groups</a>
+                    <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
@@ -62,7 +59,9 @@
 </header>
 
 <body>
-    <div class="clocktitle"> <H1>Clocksmiths Team</H1></div>
+    <div class="clocktitle">
+        <H1>Clocksmiths Team</H1>
+    </div>
     <div class="page-section page-section-padding row">
         <div class="people-panel col-12 col-lg-3 my-4 px-4">
             <div class="text-center"><img src="../IMAGES/sample-profile.png" alt="Abdelrahman Jamal" title=""
@@ -143,6 +142,7 @@
                 </p>
             </small>
         </div>
+    </div>
 </body>
 
 
