--- a/DBProject/HTML/Employee.html
+++ b/DBProject/HTML/Employee.html
@@ -37,10 +37,10 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Groups</a>
+                    <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
@@ -147,7 +147,7 @@
                 </label>
             </div>
             <div class="col-lg-9">
-                180$
+                18000$
             </div>
 
         </div>
