--- a/DBProject/HTML/Group.html
+++ b/DBProject/HTML/Group.html
@@ -38,10 +38,10 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Groups</a>
+                    <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
@@ -73,6 +73,7 @@
         <div class="grouptitleborder mt-3">
             <H1>PUPG Campers</H1>
            <H6>1 member</H6>
+           <h6>All PUBG Campers unite in a heated discussion for the best map to camp in.</h6>
           </div>
      </div>
          
@@ -86,7 +87,7 @@
         </div>
           <div class="col-lg-11 posts"  onclick="display()">
 
-            <h5  class="mt-2">What is in Your mind,Radwa?</h5>
+            <h5  class="mt-2">What is on Your mind,Radwa?</h5>
             
           </div>
        </div>
