--- a/DBProject/HTML/signup.html
+++ b/DBProject/HTML/signup.html
@@ -20,10 +20,10 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Groups</a>
+                    <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
