--- a/DBProject/HTML/signup.html
+++ b/DBProject/HTML/signup.html
@@ -1,3 +1,4 @@
+<?php include('signup.php') ?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,7 +47,6 @@
 
     <div class="container-fluid">
 
-        <?php include('signup.php') ?>
         <div class="row">
             <form action="../PHP/signup.php" method="POST">
 
@@ -82,7 +82,7 @@
                     <br>
                     <button class="btn btn-primary" type="submit" id="submit" name="submit">Sign Up</button>
 
-                    <button class="btn btn-success"> <a href="login.php">Log In</a></button>
+                    <button class="btn btn-success"> <a href="../HTML/login.html">Log In</a></button>
 
                 </div>
 
