Created a page for the user to publish an application
IMP NOTE: Added Application_Link to the Clockwork database DON'T FORGET to drop the database and creating it again in phpmyadmin before proceeding to avoid future errors.
The page done still needs some more validation and php handling to connect it to the database.

--- a/DBProject/HTML/Category.html
+++ b/DBProject/HTML/Category.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../HTML/supportticket.html">Support</a>
+                        <a class="nav-link" href="../HTML/PublishApp.html">Publish </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Extra </a>
+                        <a class="nav-link" href="../HTML/supportticket.html">Support</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../HTML/About.html">About</a>
