--- a/DBProject/HTML/user.html
+++ b/DBProject/HTML/user.html
@@ -43,13 +43,16 @@
                     <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../HTML/PublishApp.html">Publish </a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Extra </a>
+                    <a class="nav-link" href="../HTML/About.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="../HTML/About.html">About</a>
+                    <a class="nav-link" href="../PHP/logout.php">Log out</a>
                 </li>
 
             </ul>
