Added Categories class and added a few functions to the App and Review classes
Also, added a new session variable called userid to be able to use it later on when the user posts a post, publishes an app, joins a group or writes a review , etc...

--- a/DBProject/HTML/PublishApp.html
+++ b/DBProject/HTML/PublishApp.html
@@ -1,3 +1,4 @@
+<?php include('PublishApp.php') ?>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -83,11 +84,11 @@
             <h6></h6>
             <label for="age-rating">Age Rating:</label>
             <select name="age-rating" id="age-rating">
-                <option value="E">Everyone</option>
-                <option value="E10">Everyone 10+</option>
-                <option value="T">Teen</option>
-                <option value="M">Mature</option>
-                <option value="AO">Adults Only</option>
+                <option value=3>Everyone</option>
+                <option value=10>Everyone 10+</option>
+                <option value=13>Teen</option>
+                <option value=17>Mature</option>
+                <option value=18>Adults Only</option>
             </select>
             <h6></h6>
             <label>Available in:</label>
