--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -54,6 +54,9 @@
                     <a class="nav-link" href="../HTML/About.html">About</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../HTML/user.php">Profile</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../PHP/logout.php">Log out</a>
                 </li>
 
