Nav-Bar Tiny Adjustment

--- a/DBProject/HTML/Group.html
+++ b/DBProject/HTML/Group.html
@@ -38,7 +38,7 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.php">Browse</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
@@ -51,6 +51,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/About.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../PHP/logout.php">Log out</a>
                 </li>
 
             </ul>
