--- a/DBProject/HTML/Home.html
+++ b/DBProject/HTML/Home.html
@@ -39,7 +39,7 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.php">Browse</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
@@ -52,9 +52,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/About.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../HTML/user.php">Profile</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../PHP/logout.php">Log out</a>
