--- a/DBProject/HTML/PublishApp.html
+++ b/DBProject/HTML/PublishApp.html
@@ -36,7 +36,7 @@
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="../HTML/Browse.html">Browse</a>
+                    <a class="nav-link" href="../HTML/Browse.php">Browse</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../HTML/Groups_List.html">Groups</a>
