Added a user class, added a link to the user page in the navbar, changed the connection class into a singleton for unified access across the whole code.
You now only need to change the data in  "connection.php" for the changes to take place across the whole backend

--- a/DBProject/HTML/About.html
+++ b/DBProject/HTML/About.html
@@ -25,8 +25,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <title>Document</title>
 </head>
-<header>
 
+<header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
         <a class="navbar-brand" href="../HTML/Home.html">Clockwork</a>
         <button class="navbar-toggler" data-target="#my-nav" data-toggle="collapse" aria-controls="my-nav"
@@ -48,16 +48,17 @@
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../HTML/user.php">Profile</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../HTML/About.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../PHP/logout.php">Log out</a>
                 </li>
-
             </ul>
         </div>
     </nav>
-
     </nav>
 </header>
 
@@ -104,16 +105,16 @@
             <p class="my-3">Notes</p>
         </div>
         <div class="people-panel col-12 col-lg-3 my-4 px-4">
-            <div class="text-center"><img src="../IMAGES/sample-profile.png" alt="Tarek Yasser" title=""
-                    draggable="false" class="nav-dropdown-item-icon" height="200" style="border-radius: 50%;"></div>
+            <div class="text-center"><img src="../IMAGES/Kaminarox.jpg" alt="Tarek Yasser" title="" draggable="false"
+                    class="nav-dropdown-item-icon" height="200" style="border-radius: 50%;"></div>
             <div class="text-center mt-3">
                 <h4><b>Tarek Yasser</b></h4>
-                <p><b>Choose Title</b> <a href="https://www.linkedin.com/in/tarek-ismail-263a031b4/"
-                        target="_blank"><img src="../IMAGES/linke3(1).png" title="" draggable="false"
+                <p><b>BEEP BOOP</b> <a href="https://www.linkedin.com/in/tarek-ismail-263a031b4/" target="_blank"><img
+                            src="../IMAGES/linke3(1).png" title="" draggable="false"
                             style="height: 20px; width: auto; margin-left: 5px; margin-top: -3px; opacity: 0.8;"></a>
                 </p>
             </div>
-            <p class="my-3">Notes</p>
+            <p class="my-3">NOTES</p>
         </div>
     </div>
     <div class="clocktitle">
