--- a/DBProject/HTML/Category.html
+++ b/DBProject/HTML/Category.html
@@ -48,6 +48,9 @@
                         <a class="nav-link" href="../HTML/supportticket.html">Support</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../HTML/user.php">Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../HTML/About.html">About</a>
                     </li>
                     <li class="nav-item">
