--- a/DBProject/HTML/Group.html
+++ b/DBProject/HTML/Group.html
@@ -50,6 +50,9 @@
                     <a class="nav-link" href="../HTML/supportticket.html">Support</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="../HTML/user.php">Profile</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="../HTML/About.html">About</a>
                 </li>
                 <li class="nav-item">
